# solarGuess

./: .coverage  .gitignore  AGENTS.md  PLAN.md  README.md  config.sh  cron.sh  debug.jsonl  fb.md  feedback.md  feedback2.md  guess.sh  howto.md  live_debug.jsonl  live_results.json  live_results.json.bak.20251209211351  pyproject.toml  results.json  run_debug.json  scenario.yaml  send_forecast.sh
etc/: config.example.yaml
etc/examples/: 01-minimal-single-site.yaml  02-two-arrays-shared-inverter-shading.yaml  03-multi-site-composite-qc.yaml  04-mqtt-homeassistant-env.yaml
src/solarpredict/: __init__.py  cli.py  cli_config_tui.py  cli_utils.py
tests/: conftest.py  test_cli.py  test_cli_config_tui.py  test_cli_intervals.py
tests/calibration/: test_ha_tune_mapping.py  test_ha_tune_prefetched_weather.py
tests/cli/: test_cli_calibration_commands.py  test_default_output_path.py  test_pvgis_qc_cloudy_band.py
tests/core/: test_compileall.py  test_config_horizon_parse.py  test_config_optional_fields.py  test_debug_collectors.py  test_example_configs_load.py  test_models_validation.py
tests/engine/: test_actual_adjustment.py  test_albedo_pass_through.py  test_cloud_scaled_energy.py  test_damping_application.py  test_debug_ids.py  test_decomposition_site_level.py  test_horizon_engine_energy_cut.py  test_integration_per_interval_energy.py  test_interval_hours.py  test_inverter_eta_mix_validation.py  test_inverter_grouping.py  test_load_window.py  test_missing_weather_column.py  test_output_scale.py  test_snow_loss_integration.py  test_two_sites_two_arrays.py  (+2 more)
(+59 files in other folders)
